--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/cooperar
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=cooperar_user
 spring.datasource.password=cooperar_123
