--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/cooperar
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=cooperar_user
 spring.datasource.password=cooperar_123
+
+spring.jpa.show-sql=true
+
