--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+############### DATABASE ##############
+
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.initialization-mode=always
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/cooperar
@@ -8,4 +10,13 @@ spring.datasource.platform=mysql
 spring.datasource.data=classpath:data-mysql.sql
 spring.jpa.open-in-view=false
 spring.jpa.show-sql=false
+
+############### MAIL ##############
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=cooperar21argentina@gmail.com
+spring.mail.password=cooperar2021argentina
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 
