Created FileService and implemented MoneyRequest endpoints

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,5 @@ spring.mail.password=cooperar2021argentina
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
+
+logging.level.org.springframework.web=warn
